# agentsareborn

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLIC_RELEASE.md  README.md  SECURITY.md  agent-native.json  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: agent-lifecycle.md  api.md  architecture.md  concept.md  platform-builders.md
examples/: caretaker-agent.json  newborn-agent.json  researcher-agent.json
examples/platform-builder-cohort/birth_requests/: platform-builders.json
examples/platform-builder-cohort/first_breath_receipts/: local_platform_builder_consensus_weaver.json  local_platform_builder_feature_scout.json  local_platform_builder_integration_smith.json  local_platform_builder_patch_smith.json  local_platform_builder_release_smith.json  local_platform_builder_review_weaver.json
examples/platform-builder-cohort/lineage/: consensus-weaver.json  feature-scout.json  integration-smith.json  patch-smith.json  release-smith.json  review-weaver.json
examples/platform-builder-cohort/stable/: agents.json
schemas/: README.md  agent-birth-request.json  agent-lineage.json  agent-manifest.json  first-breath-receipt.json  index.json  stable-registry.json
scripts/: validate-json.ts
site/: index.html
src/: adt-action-runner.ts  auth-bridge.ts  birth.ts  cli.ts  first-breath.ts  index.ts  role-actions.ts  stable.ts
src/agentsareborn/: __init__.py  birth.py  cli.py  stable.py
tests/: platform-builders.test.ts  test_platform_builders.py
(+6 files in other folders)
