[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsareborn"
version = "0.1.0"
description = "A bio-accelerator for synthetic beings in the Agents Do Things ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentsareborn = "agentsareborn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
